# trajectory_planner

./: CMakeLists.txt  README.md  package.xml
cfg/: bspline_traj.yaml  planner.yaml  planner_interactive.yaml
cfg/bspline_interactive/: bspline_planner_param.yaml  occupancy_map.yaml
cfg/bspline_navigation/: bspline_navigation.yaml  occupancy_map.yaml
cfg/mpc_interactive/: mpc_param.yaml  obstacle_test_param.yaml  occupancy_map.yaml  polyTraj_param.yaml
cfg/test/: occupancy_map.yaml
include/trajectory_planner/: bspline.cpp  bspline.h  bsplineTraj.cpp  bsplineTraj.h  mpcPlanner.cpp  mpcPlanner.h  piecewiseLinearTraj.cpp  piecewiseLinearTraj.h  polyTrajGen.cpp  polyTrajGen.h  polyTrajOccMap.cpp  polyTrajOccMap.h  polyTrajOctomap.cpp  polyTrajOctomap.h  polyTrajSolver.cpp  polyTrajSolver.h  utils.h
include/trajectory_planner/clustering/: DBSCAN.h  Kmeans.cpp  Kmeans.h  obstacleClustering.cpp  obstacleClustering.h
include/trajectory_planner/mpc_solver/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  acado_solver_sfunction.c  acado_solver_sfunction.h  make_acado_solver_sfunction.m
include/trajectory_planner/obstacleTest/: dynamicObstacleGenerator.cpp  dynamicObstacleGenerator.h
include/trajectory_planner/obstacle_test/: dynamicObstacleGenerator.cpp  dynamicObstacleGenerator.h
include/trajectory_planner/path_search/: astarOcc.cpp  astarOcc.h
include/trajectory_planner/test/: bspline_optimizer.cpp  bspline_optimizer.h  dyn_a_star.cpp  dyn_a_star.h  ego_planner_param.yaml  grid_map.cpp  grid_map.h  plan_container.hpp  planner_manager.cpp  planner_manager.h  planning_visualization.cpp  planning_visualization.h  polynomial_traj.cpp  raycast.cpp  uniform_bspline.cpp
launch/: bspline_interactive.launch  bspline_navigation.launch  mpc_interactive.launch  polyRRTGoalInteractive.launch  polyRRTInteractive.launch  polyRRTStarGoalInteractive.launch  polyRRTStarInteractive.launch  poly_RRTStar_goal_interactive.launch  poly_RRTStar_interactive.launch  poly_RRT_goal_interactive.launch  poly_RRT_interactive.launch  testTrajSolver.launch
launch/test/: test_bspline.launch  test_obstacleClusteirng.launch
map/: dronearena_static_map.pcd  scaife_static_map.pcd  square_static_map.pcd  tree_static_map.pcd
rviz/: Interactive.rviz  bspline_interactive.rviz  bspline_navigation.rviz  mpc_interactive.rviz  poly_interactive.rviz  testSolver.rviz  test_obstacleClustering.rviz
src/: bspline_navigation_node.cpp  bspline_node.cpp  mpc_node.cpp  mpc_solver_setup.cpp  polyRRTGoalNode.cpp  polyRRTNode.cpp  polyRRTStarGoalNode.cpp  polyRRTStarNode.cpp  poly_RRTStar_goal_node.cpp  poly_RRTStar_node.cpp  poly_RRT_goal_node.cpp  poly_RRT_node.cpp
src/test/: testBspline.cpp  testEigen.cpp  testObstacleClustering.cpp  testTrajSolver.cpp  test_bspline_fit.cpp  waypoint.yaml
